<resources>
    <string name="app_name">SuperHeroes</string>
    <string name="label_unknown_error">Error desconocido</string>
    <string name="label_network_error">Error de conexion</string>
    <string name="label_intelligence">Inteligencia</string>
    <string name="label_speed">Velocidad</string>
    <string name="label_fight">Combate</string>
    <string name="main_title">SuperHeroes</string>
    <string name="description_title">SuperHero</string>
    <string name="search_view_hint">Buscar</string>
    <string name="google_login">Identificarse con Google</string>
    <string name="button_cancel">Cancelar</string>
    <string name="label_login">Puede identificarse con su cuenta de Google</string>


</resources>