<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:maxLines="2">

                <com.google.android.material.appbar.MaterialToolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:layout_collapseMode="pin"
                    app:navigationIcon="@drawable/ic_left_arrow" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/image_detail"
                android:layout_width="@dimen/width_image_detail"
                android:layout_height="@dimen/heigh_image_detail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/backgrounds/scenic"></ImageView>

            <com.google.android.material.textview.MaterialTextView
                style="@style/AppTitleCard"
                android:id="@+id/superhero_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Hola"
                android:layout_marginStart="@dimen/spacing"
                android:layout_marginTop="@dimen/spacing_top"

                app:layout_constraintTop_toBottomOf="@+id/image_detail"
                app:layout_constraintStart_toStartOf="@id/image_detail">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/superhero_alignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/superhero_name"
                app:layout_constraintBottom_toBottomOf="@id/superhero_name"
                app:layout_constraintEnd_toEndOf="@id/image_detail"
                android:textStyle="bold"
                android:textSize="15sp"
                android:layout_marginEnd="@dimen/spacing"
                android:textColor="@color/aqua_blue"
                tools:text="GOOD">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/super_hero_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/superhero_name"
                app:layout_constraintTop_toBottomOf="@id/superhero_name"
                tools:text="NombreCompleto"
                android:layout_marginTop="@dimen/spacing_top">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/super_hero_conections"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/superhero_name"
                app:layout_constraintEnd_toEndOf="@id/image_detail"
                app:layout_constraintTop_toBottomOf="@id/super_hero_full_name"
                tools:text="Descripcion"
                android:layout_marginTop="@dimen/spacing_top">

            </com.google.android.material.textview.MaterialTextView>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/superhero_powerstats"
                android:layout_marginHorizontal="@dimen/spacing_horizontal"
                android:layout_marginTop="@dimen/spacing_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/superhero_name"
                app:layout_constraintTop_toBottomOf="@id/super_hero_conections">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/superhero_intelligence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/label_intelligence"
                    app:layout_constraintStart_toStartOf="parent">
                    >

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/superhero_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/label_speed">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/superhero_fight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/label_fight">

                </com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/intelligence_valor"
                    android:layout_marginTop="@dimen/spacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/superhero_intelligence"
                    app:layout_constraintStart_toStartOf="@id/superhero_intelligence"
                    app:layout_constraintEnd_toEndOf="@id/superhero_intelligence"
                    tools:text="30"></com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/speed_valor"
                    android:layout_marginTop="@dimen/spacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/superhero_speed"
                    app:layout_constraintStart_toStartOf="@id/superhero_speed"
                    app:layout_constraintEnd_toEndOf="@id/superhero_speed"
                    tools:text="30"></com.google.android.material.textview.MaterialTextView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/figh_valor"
                    android:layout_marginTop="@dimen/spacing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/superhero_fight"
                    app:layout_constraintStart_toStartOf="@id/superhero_fight"
                    app:layout_constraintEnd_toEndOf="@id/superhero_fight"
                    tools:text="30"></com.google.android.material.textview.MaterialTextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintStart_toStartOf="@id/superhero_name"
                app:layout_constraintEnd_toEndOf="@id/superhero_alignment"
                android:id="@+id/details_images_recycler_view"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/superhero_powerstats">

            </androidx.recyclerview.widget.RecyclerView>

            <include
                android:id="@+id/view_error"
                layout="@layout/view_error"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="-52dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>